--- a/css/xprocbook.css
+++ b/css/xprocbook.css
@@ -1,133 +1,121 @@
-p.element-syntax                    { padding: 4px; }
-p.element-syntax-declare-step       { border: solid thin; background-color: #ffeeff }
-p.element-syntax-error-vocabulary   { border: solid thin; background-color: #ffffee }
-p.element-syntax-language-construct { border: solid thin; background-color: #ffeeff }
-p.element-syntax-language-example   { border: solid thin; background-color: #ffeeff }
-p.element-syntax-other-step         { border: solid thin; background-color: #ffeeff }
-p.element-syntax-step-vocabulary    { border: solid thin; background-color: #ffffee }
-
-thead tr th {
-  background-color: #333333;
-  color: white;
+p.element-syntax {
+  padding: 4px;
 }
-
-h1,h2,h3,h4,h5,h6,
+p.element-syntax-declare-step,
+p.element-syntax-error-vocabulary,
+p.element-syntax-language-construct,
+p.element-syntax-language-example,
+p.element-syntax-other-step,
+p.element-syntax-step-vocabulary {
+  border: solid thin;
+}
+p.element-syntax-declare-step {
+  background-color: $light-pink;
+}
+p.element-syntax-error-vocabulary {
+  background-color: #ffe;
+}
+p.element-syntax-language-construct {
+  background-color: $light-pink;
+}
+p.element-syntax-language-example {
+  background-color: $light-pink;
+}
+p.element-syntax-other-step {
+  background-color: $light-pink;
+}
+p.element-syntax-step-vocabulary {
+  background-color: #ffe;
+}
+thead tr th {
+  background-color: #333;
+  color: #fff;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 .toc p {
   font-family: sans-serif;
 }
-
 h2 .refname tt {
   font-family: sans-serif;
 }
-
-.programlisting, .screen {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  border: solid thin #ccddcc;
-  background-color: #eeffee;
+.programlisting,
+.screen {
+  padding-top: 0;
+  padding-bottom: 0;
+  border: solid thin #cdc;
+  background-color: #efe;
 }
-
-.programlisting pre, .screen pre {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
+.programlisting pre,
+.screen pre {
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
-
 span.linenumber {
-  background-color: #ccddcc;
+  background-color: #cdc;
 }
-
 .admonition {
   padding: 10px;
-  border: solid thin #ccdddcc;
+  border: solid thin #cdc;
 }
-
 .admonition h3 {
   font-size: normal;
 }
-
-span.diff, div.diff {
-  background-color: #ffffaa;
+span.diff,
+div.diff {
+  background-color: #ffa;
 }
-
-span.add, div.add {
-  background-color: #aaffaa;
+span.add,
+div.add {
+  background-color: #afa;
 }
-
-span.orig, div.orig {
-  background-color: #ffffaa;
+span.orig,
+div.orig {
+  background-color: #ffa;
 }
-
-span.del, div.del {
-  background-color: #ffaaaa;
+span.del,
+div.del {
+  background-color: #faa;
   text-decoration: line-through;
 }
-
 div.line {
   font-family: monospace;
   white-space: pre;
 }
-
 table.pipelineexample {
-  margin-top: "0.5em;"
+  margin-top: 0.5em;
 }
-
 .exlink {
   text-align: right;
   padding-right: 45px;
   padding-top: 2px;
   padding-bottom: 4px;
 }
-
 .exlink a,
 .exlink a:visited {
-  color: black;
+  color: #000;
   text-decoration: none;
   font-family: sans-serif;
   font-size: small;
 }
-
-/* Pretty printing */
-
-.atteq {
-}
-
-.attq {
-}
-
-.colon {
-}
-
-.mso {
-}
-
-.msc {
-}
-
+/*  Pretty printing     */
+.atteq  {}
+.attq   {}
+.colon  {}
+.mso    {}
+.msc    {}
 .nsdecl,
 .nsdecl .tag-attribute,
 .nsdecl .tag-attvalue {
-  color: #AAAAAA;
+  color: #aaa;
 }
-
 .pcdata {
-  color: #44AA44;
+  color: #4a4;
 }
-
-pre .tag-attribute {
-}
-
-pre .tag-attvalue {
-}
-
-pre .tag-element {
-}
-
-pre .tag-localname {
-}
-
-pre .tag-prefix {
-}
-
-/* /Pretty printing */
+/*  /Pretty printing    */
